// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertTokensObjectToResolved converts object-like unresolved tokens to resolved object 1`] = `
Object {
  "colors": Object {
    "blue": Object {
      "failedToResolve": false,
      "type": "color",
      "value": "#0000ff",
    },
    "primary": Object {
      "failedToResolve": false,
      "type": "color",
      "value": "#ff0000",
    },
    "red": Object {
      "failedToResolve": false,
      "type": "color",
      "value": "#ff0000",
    },
  },
  "sizing": Object {
    "base": Object {
      "failedToResolve": false,
      "type": "sizing",
      "value": 2,
    },
    "medium": Object {
      "failedToResolve": false,
      "type": "sizing",
      "value": 3,
    },
    "scale": Object {
      "failedToResolve": false,
      "type": "sizing",
      "value": 1.5,
    },
    "small": Object {
      "failedToResolve": false,
      "type": "sizing",
      "value": 2,
    },
  },
}
`;

exports[`convertTokensObjectToResolved does not expand shadows when not needed 1`] = `
Object {
  "shadow": Object {
    "1": Object {
      "failedToResolve": false,
      "rawValue": Object {
        "blur": "4",
        "color": "#000000",
        "spread": "5",
        "type": "dropShadow",
        "x": "2",
        "y": "3",
      },
      "type": "boxShadow",
      "value": Object {
        "blur": 4,
        "color": "#000000",
        "spread": 5,
        "type": "dropShadow",
        "x": 2,
        "y": 3,
      },
    },
    "2": Object {
      "failedToResolve": false,
      "rawValue": Array [
        Object {
          "blur": "4",
          "color": "#000000",
          "spread": "5",
          "type": "dropShadow",
          "x": "2",
          "y": "3",
        },
        Object {
          "blur": "5",
          "color": "#000000",
          "spread": "6",
          "type": "dropShadow",
          "x": "3",
          "y": "4",
        },
      ],
      "type": "boxShadow",
      "value": Array [
        Object {
          "blur": 4,
          "color": "#000000",
          "spread": 5,
          "type": "dropShadow",
          "x": 2,
          "y": 3,
        },
        Object {
          "blur": 5,
          "color": "#000000",
          "spread": 6,
          "type": "dropShadow",
          "x": 3,
          "y": 4,
        },
      ],
    },
  },
}
`;

exports[`convertTokensObjectToResolved does not expand typography when not needed 1`] = `
Object {
  "typography": Object {
    "h1": Object {
      "failedToResolve": false,
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 96,
        "fontWeight": "Light",
      },
    },
    "h2": Object {
      "failedToResolve": false,
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 60,
        "fontWeight": "Light",
      },
    },
    "h3": Object {
      "failedToResolve": false,
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 48,
        "fontWeight": "Light",
      },
    },
  },
}
`;

exports[`convertTokensObjectToResolved preserves rawValue when requested 1`] = `
Object {
  "colors": Object {
    "background": Object {
      "failedToResolve": false,
      "rawValue": "$colors.black",
      "type": "color",
      "value": "#000000",
    },
    "black": Object {
      "failedToResolve": false,
      "rawValue": "#000000",
      "type": "color",
      "value": "#000000",
    },
    "white": Object {
      "failedToResolve": false,
      "rawValue": "#ffffff",
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;

exports[`convertTokensObjectToResolved respects used sets 1`] = `
Object {
  "colors": Object {
    "background": Object {
      "failedToResolve": false,
      "type": "color",
      "value": "#ffffff",
    },
    "black": Object {
      "failedToResolve": false,
      "type": "color",
      "value": "#000000",
    },
    "white": Object {
      "failedToResolve": false,
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;
